# building-code-agents-with-hugging-face-smolagents

./: README.md  main.py  pyproject.toml  requirements.txt
src/: Lesson2.ipynb  Lesson3.ipynb  Lesson4.ipynb  Lesson5.ipynb  helper.py
