[project]
name = "building-code-agents-with-hugging-face-smolagents"
version = "0.1.0"
description = "Building Code Agents with Hugging Face smolagents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-custom-utils",
    "arize-phoenix==8.19.1",
    "arize-phoenix-otel==0.9.0",
    "e2b-code-interpreter==1.0.5",
    "ipywidgets==8.1.5",
    "kaleido==0.2.1",
    "numpy==2.2.3",
    "openai==1.66.3",
    "openinference-instrumentation==0.1.21",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "plotly==6.0.1",
    "smolagents[telemetry]==1.13.0",
    "tavily-python==0.5.1",
]

[tool.uv.sources]
ai-custom-utils = { git = "https://github.com/davoshack/ai-custom-utils.git" }
